--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 language: csharp
 solution: "./SketchAssistant/SketchAssistant.sln"
+
+install:
+  - sudo apt-get install nunit-console
+  - nuget restore "./SketchAssistant/SketchAssistant.sln"
+  
+script:
+  - xbuild "./SketchAssistant/SketchAssistant.sln"
+  - nunit-console "./SketchAssistant/NUnitTestProject1/bin/Debug/netcoreapp2/NUnitTestProject1.dll"
