--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ solution: "./SketchAssistant/SketchAssistant.sln"
 install:
   - nuget restore "./SketchAssistant/SketchAssistant.sln"
   - nuget install NUnit.ConsoleRunner -Version 3.9.0 -OutputDirectory testrunner
+before_script:
+  - tree
 script:
   - xbuild /p:Configuration=Release "./SketchAssistant/SketchAssistant.sln"
   - mono ./testrunner/NUnit.ConsoleRunner.3.9.0/tools/nunit-console.exe "./SketchAssistant/NUnitTestProject1/bin/Debug/netcoreapp2/NUnitTestProject1.dll"
