--- a/SketchAssistant/SketchAssistant/SketchAssistant.csproj
+++ b/SketchAssistant/SketchAssistant/SketchAssistant.csproj
@@ -67,6 +67,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Action.cs" />
+    <Compile Include="ActionHistory.cs" />
     <Compile Include="Line.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
