--- a/SketchAssistant/SketchAssistant/packages.config
+++ b/SketchAssistant/SketchAssistant/packages.config
@@ -9,6 +9,7 @@
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.5" targetFramework="net461" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.8.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.11.2" targetFramework="net461" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net461" />
   <package id="Svg" version="2.3.0" targetFramework="net461" />
   <package id="SvgNet" version="1.0.8" targetFramework="net461" />
 </packages>
