--- a/SketchAssistant/SketchAssistant/SketchAssistant.csproj
+++ b/SketchAssistant/SketchAssistant/SketchAssistant.csproj
@@ -69,6 +69,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MVP_Presenter.cs" />
+    <Compile Include="MVP_Model.cs" />
     <Compile Include="RedrawAssistant.cs" />
     <Compile Include="FileImporter.cs" />
     <Compile Include="FileImporterException.cs" />
