--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: csharp
 solution: "./SketchAssistant/SketchAssistant.sln"
 
-install:
-  - nuget restore "./SketchAssistant/SketchAssistant.sln"
-  - nuget install NUnit.ConsoleRunner -Version 3.9.0 -OutputDirectory testrunner
+before_install:
+  - sudo apt-get install nunit-console
+before_script:
+  - nuget restore SketchAssistant.sln
+after_script:
+  - nunit-console "./SketchAssistant/SketchAssistantWPF.Tests/bin/Debug/net461"
