--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ solution: "./SketchAssistant/SketchAssistant.sln"
 before_install:
   - sudo apt-get install nunit-console
 before_script:
-  - nuget restore SketchAssistant.sln
+  - nuget restore "./SketchAssistant/SketchAssistant.sln"
 after_script:
   - nunit-console "./SketchAssistant/SketchAssistantWPF.Tests/bin/Debug/net461/SketchAssistantWPF.Tests.dll"
