--- a/SketchAssistant/SketchAssistantWPF.Tests/SketchAssistantWPF.Tests.csproj
+++ b/SketchAssistant/SketchAssistantWPF.Tests/SketchAssistantWPF.Tests.csproj
@@ -16,4 +16,14 @@
     <ProjectReference Include="..\SketchAssistantWPF\SketchAssistantWPF.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows" />
+    <Reference Include="System.Xaml" />
+  </ItemGroup>
+
 </Project>
