--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,2 +1,7 @@
 image:
  - Visual Studio 2017
+ 
+install:
+    - "nuget install Microsoft.VisualStudio.TestPlatform.TestFramework"
+    - "nuget install Castle.Core"
+	- "nuget install TestStack.White"
