--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,5 +2,4 @@ image:
  - Visual Studio 2017
  
 install:
-    - "nuget install Microsoft.VisualStudio.TestPlatform.TestFramework"
-    - "nuget install Castle.Core"
+ - "nuget install TestStack.White"
