hopefully this works

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,3 +3,5 @@ image:
  
 install:
  - "nuget install TestStack.White"
+ - "nuget install MSTest.TestAdapter"
+ - "nuget install MSTest.TestFramework"
