added nuget restore

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,3 +5,4 @@ install:
  - "nuget install TestStack.White"
  - "nuget install MSTest.TestAdapter"
  - "nuget install MSTest.TestFramework"
+ - "nuget restore"
