Added debug mode, added Test

--- a/SketchAssistant/SketchAssistantWPF/SketchAssistantWPF.csproj
+++ b/SketchAssistant/SketchAssistantWPF/SketchAssistantWPF.csproj
@@ -75,6 +75,7 @@
     </ApplicationDefinition>
     <Compile Include="ActionHistory.cs" />
     <Compile Include="CustomCanvas.cs" />
+    <Compile Include="DebugData.cs" />
     <Compile Include="FileImporter.cs" />
     <Compile Include="FileImporterException.cs" />
     <Compile Include="GeometryCalculator.cs" />
