--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,3 +6,15 @@ install:
  - "nuget install MSTest.TestAdapter"
  - "nuget install MSTest.TestFramework"
  - "nuget restore SketchAssistant/SketchAssistant.sln"
+ 
+#artifacts:
+#  - path: SketchAssistant/WhiteTests/test_input_files/whitelisted/*.svg
+#    name: whitelisted svg files for testing
+#  - path: SketchAssistant/WhiteTests/test_input_files/blacklisted/*.svg
+#    name: blacklisted svg files for testing
+
+test:
+    #don't run tests depending on [DeploymentItem] and filesystem access
+    categories:
+        except:
+            - FileIO
