added TrajectoryGenerator.cs to solution

--- a/SketchAssistant/SketchAssistantWPF/SketchAssistantWPF.csproj
+++ b/SketchAssistant/SketchAssistantWPF/SketchAssistantWPF.csproj
@@ -81,6 +81,7 @@
     <Compile Include="GeometryCalculator.cs" />
     <Compile Include="ImageDimension.cs" />
     <Compile Include="SketchAction.cs" />
+    <Compile Include="TrajectoryGenerator.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
