--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,8 +1,27 @@
 image:
- - Visual Studio 2017
- 
+    - Visual Studio 2017
+
 install:
- - "nuget install TestStack.White"
- - "nuget install MSTest.TestAdapter"
- - "nuget install MSTest.TestFramework"
- - "nuget restore SketchAssistant/SketchAssistant.sln"
+    - "nuget install TestStack.White"
+    - "nuget install MSTest.TestAdapter"
+    - "nuget install MSTest.TestFramework"
+    - "nuget restore SketchAssistant/SketchAssistant.sln"
+
+before_build:
+    - ps: .\screenres.ps1
+
+artifacts:
+    - path: \SketchAssistant\GeneratedReports\
+#  - path: SketchAssistant/WhiteTests/test_input_files/whitelisted/*.svg
+#    name: whitelisted svg files for testing
+#  - path: SketchAssistant/WhiteTests/test_input_files/blacklisted/*.svg
+#    name: blacklisted svg files for testing
+
+before_test:
+    - ps: "SketchAssistant/GenerateCoverageReport.bat"
+
+test:
+    #don't run tests depending on [DeploymentItem] and filesystem access
+    categories:
+        except:
+            - FileIO
