--- a/SketchAssistant/SketchAssistantWPF/SketchAssistantWPF.csproj
+++ b/SketchAssistant/SketchAssistantWPF/SketchAssistantWPF.csproj
@@ -75,6 +75,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ActionHistory.cs" />
+    <Compile Include="Angle.cs" />
     <Compile Include="CustomCanvas.cs" />
     <Compile Include="DebugData.cs" />
     <Compile Include="FileImporter.cs" />
