--- a/SketchAssistant/SketchAssistantWPF/SketchAssistantWPF.csproj
+++ b/SketchAssistant/SketchAssistantWPF/SketchAssistantWPF.csproj
@@ -138,6 +138,15 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="BodyActuator.dll" />
+    <Content Include="eai_common.dll" />
+    <Content Include="eai_serial.dll" />
+    <Content Include="eai_winbluetooth.dll" />
+    <Content Include="eai_winusb.dll" />
+    <Content Include="TActionManager.dll" />
+    <Content Include="TactorInterface.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
