--- a/SketchAssistant/StaticLib1/StaticLib1.vcxproj.filters
+++ b/SketchAssistant/StaticLib1/StaticLib1.vcxproj.filters
@@ -21,16 +21,16 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\BPMotoren\Actuator.h">
+    <ClInclude Include="Motorheader\Actuator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\BPMotoren\ArduinoHub.h">
+    <ClInclude Include="Motorheader\ArduinoHub.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\BPMotoren\EAIHub.h">
+    <ClInclude Include="Motorheader\EAIHub.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\BPMotoren\Serial.h">
+    <ClInclude Include="Motorheader\Serial.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -38,5 +38,11 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UnitTest1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
