added ArmbandInterface Klasse

--- a/SketchAssistant/StaticLib1/StaticLib1.vcxproj.filters
+++ b/SketchAssistant/StaticLib1/StaticLib1.vcxproj.filters
@@ -38,7 +38,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="UnitTest1.cpp">
+    <ClCompile Include="ArmbandInterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
