--- a/SketchAssistant/StaticLib1/StaticLib1.vcxproj.filters
+++ b/SketchAssistant/StaticLib1/StaticLib1.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Motorheader\Serial.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Motorheader\BodyActuator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
