--- a/SketchAssistant/StaticLib1/StaticLib1.vcxproj.filters
+++ b/SketchAssistant/StaticLib1/StaticLib1.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Motorheader\BodyActuator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ArmbandInterface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
