--- a/SketchAssistant/SketchAssistantWPF/packages.config
+++ b/SketchAssistant/SketchAssistantWPF/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
   <package id="Microsoft.TestPlatform" version="16.0.1" targetFramework="net461" />
   <package id="OpenCover" version="4.7.922" targetFramework="net461" />
   <package id="ReportGenerator" version="4.0.15" targetFramework="net461" />
