--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,6 +21,6 @@ before_test:
     - ps: "SketchAssistant/GenerateCoverageReport.bat"
 #test:
 #don't run tests depending on [DeploymentItem] and filesystem access
-#categories:
-#    except:
-#        - FileIO
+categories:
+    except:
+        - Local
